# chi-editor

./: .gitignore  README.md  pyproject.toml
chi_editor/: arrow_button.py  atom_button.py  block_button.py  bond_button.py  canvas.py  canvas_view.py  choose_task_dialog.py  constants.py  editor.py  editor_mode.py  eraser_button.py  error_handler.py  experiment_ui.py  hand_button.py  main.py  menu_bar.py  new_canvas.py  playground.py  popup_canvas.py  reaction_button.py  structure_button.py  task_creator.py  task_result_dialog.py  text_button.py  tool_bar.py  toolbar.py
chi_editor/api/: __init__.py  server.py  task.py
chi_editor/bases/: alpha_atom.py  line.py  menu_tool.py  sources.py  tool.py  toolbar_menu_widget.py
chi_editor/bases/molecule/: __init__.py  molecule.py  molecule_anchor.py  molecule_drawer.py
chi_editor/canvas_adapter/: adapter.py  entity.py
chi_editor/chains/: chain.py  chain_adder.py  chain_item_group.py
chi_editor/chem_bonds/: double_bond.py  single_bond.py  triple_bond.py  wedge_bond.py
chi_editor/chemistry/: atom.py  bond.py  molecule.py
chi_editor/dialog_windows/: choose_task_dialog.py  task_creation_dialog.py  task_result_dialog.py
chi_editor/dialog_windows/choose_task/: choose_task_dialog.py  local_task_dialog.py  remote_task_dialog.py  settings_menu.py
chi_editor/future/: experiment_ui.py  main.py
chi_editor/menu_buttons/: __init__.py  edit_menu.py  help_menu.py  view_menu.py
chi_editor/menubar/: menubar.py
chi_editor/reactions/: reaction.py  reaction_item.py  reaction_item_group.py  reaction_model.py  reagent_adder.py  size_constants.py
chi_editor/tasks/: __init__.py  random_task.py  task.py  task_type.py  tasks_size_constants.py
chi_editor/tool_bar_buttons/: arrow_button.py  atom_button.py  block_button.py  bond_button.py  eraser_button.py  hand_button.py  reaction_button.py  structure_button.py  text_button.py
chi_editor/toolbar/: __init__.py  button_factory.py  general_toolbar.py  toolbar.py
chi_editor/toolbar/tools/: arrow.py  (+16 more)
chi_editor/toolbar_buttons/: __init__.py  arrow_button.py  atom_button.py  block_button.py  bond_button.py  eraser_button.py  hand_button.py  reaction_button.py  structure_button.py  text_button.py  toolbar_button.py
chi_editor/utils/: json_utils.py
resources/local_tasks/: .json  Butane.json  Carbon.json  Ethane.json  N.json  Propane.json
source/chi_editor/: constants.py  editor.py
source/future/: menu_bar.py
(+59 files in other folders)
