[tool.poetry]
name = "chi-editor"
version = "0.1.0"
description = "The molecule editor in the Project Chi software package."
authors = [
    "Alexey Mazyar <mnl000mnl@mail.ru>",
    "Andrey Melnikov <andrey_dru_mel@mail.ru>",
    "Dmitriy Vashurin <kapkekes@yandex.ru>",
    "Maxim Chernyshov <mizinchik@yahoo.com>"
]
readme = "README.md"
packages = [{include = "chi_editor", from = "source"}]

[tool.poetry.dependencies]
python = "3.10.*"
pyqt6 = "^6.4.0"
rdkit = "^2022.9.1"
datamol = "^0.8.4"

[tool.poetry.group.dev.dependencies]
flake8 = "^5.0.4"
mypy = "^0.990"
pytest = "^7.2.0"
pytest-mock = "^3.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
