[tool.poetry]
name = "chi-editor"
version = "0.1.0"
description = "The molecule editor in the Project Chi software package."
authors = [
    "Alexey Mazyar <mnl000mnl@mail.ru>",
    "Andrey Melnikov <andrey_dru_mel@mail.ru>",
    "Dmitriy Vashurin <kapkekes@yandex.ru>",
    "Maxim Chernyshov <mizinchik@yahoo.com>"
]
readme = "README.md"
packages = [{include = "chi_editor"}]

[tool.poetry.dependencies]
python = "^3.10"
pyqt6 = "^6.4.2"
rdkit = "^2022.9.5"
datamol = "^0.9.0"
requests = "^2.28.2"
pydantic = "^1.10.7"

[tool.poetry.group.dev.dependencies]
ruff = "^0.0.257"
mypy = "^1.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
select = ["E", "F", "I", "Q"]

[tool.ruff.flake8-quotes]
inline-quotes = "double"
multiline-quotes = "double"
docstring-quotes = "double"
avoid-escape = false

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
